# Group28-CovidTracker

./: .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/CovidTracker/: Untitled.ipynb  __init__.py  calculate_stat_summary.py  covid_df.csv  get_covid_data.py  plot_geographical.py  plot_time_series.py
tests/: test_CovidTracker.py  test_getcoviddata.py  test_plotgeographical.py  test_statsummary.py  test_timeseries.py
