[tool.poetry]
name = "CovidTracker"
version = "0.1.0"
description = "Provides basic data cleaning, wrangling and plotting of Covid tracking data"
authors = ["Group 24"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
