[tool.poetry]
name = "CovidTracker"
version = "0.1.0"
description = "Provides basic data cleaning, wrangling and plotting of Covid tracking data"
authors = ["Group 28"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.5"
requests = "^2.27.1"
geopandas = "^0.10.2"
matplotlib = "^3.5.1"
altair = "^4.2.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
